# mem-bandwidth-lab

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
include/: error_functions.h  fifo_bench.h  get_num.h  mem_bench.h  mq_bench.h  pipe_bench.h  shm_mem.h  shm_mem_bench.h  tlpi_hdr.h
src/: .mq_bench.c.swp  error_functions.c  fifo_bench.c  get_num.c  mq_bench.c  pipe_bench.c  shm_mem.c  shm_mem_bench.c
tests/: fifo_client.c  fifo_server.c  mq_main.c  pipe_main.c  shm_mem_main.c
